# ThreeBodyProblem

./: .gitattributes  Cargo.toml  README.md
schueller/: 3bp.js  index.html
src/: ball.rs  display.rs  lib.rs  main.rs  vector.rs
static/: index.html  script.js
