[package]
name = "tbp"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "tbp"
# crate-type = ["cdylib"]

[dependencies]
# pyo3 = { version = "0.23.3", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.6"
tokio = { version = "1.42.0", features = ["full"] }


